# lab07

./: .travis.yml  CMakeLists.txt  CPackConfig.cmake  ChangeLog.md  README.md  gistfile.txt  input.txt
.github/workflows/: CI.yml
demo/: main.cpp
examples/: example1.cpp  example2.cpp
formatter_ex_lib/: CMakeLists.txt  formatter_ex.cpp  formatter_ex.h
formatter_lib/: CMakeLists.txt  formatter.cpp  formatter.h
hello_world_application/: CMakeLists.txt  hello_world.cpp
include/: print.hpp
solver_application/: CMakeLists.txt  equation.cpp
solver_lib/: solver.cpp  solver.h
sources/: print.cpp
